# spot-keygene-DoNotUse

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  lidar.service  lidar.sh  pyproject.toml  recorder.py  requirements.txt  runner.py  setup.sh
.github/workflows/: python-publish.yml  python.yml
autowalks/scan.walk/: graph
autowalks/scan.walk/edge_snapshots/: edge_snapshot_id_anemic-gull-jALP5wvXGmoApq84e4uqzQ==  edge_snapshot_id_axial-midge-4i29WgZ8fQAu4kWMaPviqg==  edge_snapshot_id_azonic-salmon-vhLUXc3K9QhT46MwOISiPA==  edge_snapshot_id_bibbed-gerbil-fEn.tfI.5WoRgOe2uSY0zA==  edge_snapshot_id_blotto-cuckoo-HlEo8ooPC2cpPVvIi+nVwg==  edge_snapshot_id_booked-lapdog-T7gSW62mguk26DnB3KIlcg==  (+32 more)
scripts/: compress.sh  lidar.service  setup.sh  start_lidar.sh
spot-keygene/: __init__.py  __main__.py  estop.py  exceptions.py  gen_tags.py  globals.py  keygene.py  recording.py  run.py  spot_client.py  tasks.py  util.py
spot-keygene/lidar/: __init__.py  blk.py
spot-keygene/qr/: gen_tags.py
spot-keygene/recording/: __init__.py  recording.py  recording_cli.py
spotkg/: __init__.py  __main__.py  globals.py  keygene.py  spot_client.py  util.py
spotkg/lidar/: __init__.py  lidar_service.py
spotkg/qr/: __init__.py  gen_tags.py
spotkg/recording/: __init__.py  recording.py  recording_cli.py  recording_web.py
src/spot-joycon/: joy.py
src/spot-keygene/: __init__.py  __main__.py  blk.py  estop.py  globals.py  keygene.py  lidar_service.py  main.py  nav.py  recording.py  run.py  spot.py  spot_client.py  tasks.py  util.py
(+43 files in other folders)
