[project]
name = "spot-keygene"
version = "0.0.1"
authors = [
  { name="Romir Kulshrestha", email="r.kulshrestha@student.tudelft.nl" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7, <3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
